Almost there. There is a pretty big bug when loading not on page 1, horizontal scroll will scroll you back to 1. Not sure why.

--- a/UI/Web/src/app/manga-reader/infinite-scroller/infinite-scroller.component.scss
+++ b/UI/Web/src/app/manga-reader/infinite-scroller/infinite-scroller.component.scss
@@ -17,8 +17,15 @@
 
     .text {
         z-index: 101;
-        
     }
+}
+
+.left {
+    transform: rotateZ(270deg);
+}
+
+.right {
+    transform: rotateZ(270deg);
 }
 
 .full-width {
